# ssh-stream

./: .gitignore  LICENSE  README.md  client.py  pyproject.toml  requirements-demo.txt  server.py
.github/workflows/: publish.yaml
demo/: client_demo.py  server_demo.py
src/: client_demo.py
src/ssh_stream/: client.py  server.py
