[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-stream"
version = "0.0.2"
authors = [
  { name="Clemens Christoph", email="cchristoph@ethz.ch" },
]
description = "Stream sensor data over ssh for real-time offboard computation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/qleml/ssh-stream"
Issues = "https://github.com/qleml/ssh-stream/issues"